# wasm-extensions

./: .gitignore  Cargo.toml  README.md  justfile
crates/api/: Cargo.toml
crates/api/src/: extension_api.rs
crates/api/wit/: extension.wit
crates/guest/: Cargo.toml
crates/guest/src/: guest_extension.rs
crates/host/: Cargo.toml
crates/host/src/: main.rs
